--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:sqlserver://172.20.115.185:1433;databaseName=ePetitii;
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=ePetitii;
 spring.datasource.username=sa
 spring.datasource.password=abc123!#
 spring.jpa.hibernate.ddl-auto = none
