--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,12 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>3.1.4</version>
         </dependency>
-        <!-- Spring Boot Security APIs -->
+        <!-- Spring Boot  Mail Sender -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>3.1.4</version>
+        </dependency>
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
