--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.jpa.properties.jakarta.persistence.jpa-compliance=true
 spring.jpa.database=H2
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=epetitiimd@gmail.com
+spring.mail.password=havnahduswtlwrfc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
