--- a/pom.xml
+++ b/pom.xml
@@ -87,5 +87,12 @@
             <version>2.2</version>
         </dependency>
 
+        <!-- DeepL API -->
+        <dependency>
+            <groupId>com.deepl.api</groupId>
+            <artifactId>deepl-java</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+
     </dependencies>
 </project>
