feature: deploy database. use server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=ePetitii;
-spring.datasource.username=sa
+spring.datasource.url=jdbc:sqlserver://epetitiiserver.database.windows.net:1433;database=ePetitiiDB;
+spring.datasource.username=epet@epetitiiserver
 spring.datasource.password=abc123!#
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.hibernate.show-sql = true
